fix: alignment should only on body

--- a/src/scss/wordpress-global/_alignment.scss
+++ b/src/scss/wordpress-global/_alignment.scss
@@ -1,38 +1,40 @@
 //--------------------------------------------------------------
 // WordPress Alignments
 //--------------------------------------------------------------
-.alignleft {
-	@apply float-left mr-16;
-}
-
-.alignright {
-	@apply float-right ml-16;
-}
-
-.aligncenter {
-	@apply mt-16 mx-auto;
-}
-
-.alignwide {
-	@apply container;
-}
-
-.alignfull {
-	@apply left-1/2 relative px-0;
-	margin-left: -50vw;
-
-	width: 100vw;
-	max-width: 100vw;
-
-	@screen tablet-landscape {
-		// Total width less vertical scroll bar.
-		width: calc( 100vw - 8.1px );
-		max-width: calc( 100vw - 8.1px );
+.site-main {
+	.alignleft {
+		@apply float-left mr-16;
 	}
-}
 
-.entry-content>*:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright) {
-	@apply mx-auto;
+	.alignright {
+		@apply float-right ml-16;
+	}
 
-	width: var(--wp--style--global--content-size);
+	.aligncenter {
+		@apply mt-16 mx-auto;
+	}
+
+	.alignwide {
+		@apply container;
+	}
+
+	.alignfull {
+		@apply left-1/2 relative px-0;
+		margin-left: -50vw;
+
+		width: 100vw;
+		max-width: 100vw;
+
+		@screen tablet-landscape {
+			// Total width less vertical scroll bar.
+			width: calc( 100vw - 8.1px );
+			max-width: calc( 100vw - 8.1px );
+		}
+	}
+
+	.entry-content>*:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright) {
+		@apply mx-auto;
+
+		width: var(--wp--style--global--content-size);
+	}
 }
